--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ Preloader
             <li><a href="#section_5" type="button"  data-toggle="collapse" data-target=".navbar-collapse">Schedule</a></li>
             <li><a href="#section_7" type="button"  data-toggle="collapse" data-target=".navbar-collapse">Member</a></li>
             <li><a href="#section_12" type="button"  data-toggle="collapse" data-target=".navbar-collapse">Biography</a></li>
+						<li><a href="#section_12" type="button"  data-toggle="collapse" data-target=".navbar-collapse">Biography</a></li>
             <li><a href="mailto:plus_sugar6@yahoo.ne.jp" type="button"  data-toggle="collapse" data-target=".navbar-collapse">Contact</a></li>
           </ul>
         </div>
@@ -531,6 +532,22 @@ Preloader
         </div>
       </div>
     </div>
+
+
+<!-- MOVIE -->
+<section id="movie" class="contentBox line01">
+<div class="inner">
+<h2>MOVIE<span>ムービー</span></h2>
+<ul class="movieBox">
+<li><div class="player"><iframe src="//www.youtube.com/embed/mMVETiOzqPM?rel=0&showsearch=0&showinfo=1&autohide" frameborder="0" allowfullscreen></iframe></div></li>
+<li><div class="player"><iframe src="//www.youtube.com/embed/e8buxs-yrRo?rel=0&showsearch=0&showinfo=1&autohide" frameborder="0" allowfullscreen></iframe></div></li>
+<li><div class="player"><iframe src="//www.youtube.com/embed/3XXCUd-7mfU?rel=0&showsearch=0&showinfo=1&autohide" frameborder="0" allowfullscreen></iframe></div></li>
+<li><div class="player"><iframe src="//www.youtube.com/embed/f13H6GGrLxk?rel=0&showsearch=0&showinfo=1&autohide" frameborder="0" allowfullscreen></iframe></div></li>
+
+</ul>
+</div>
+</section>
+<!-- //MOVIE -->
 
     <footer id="section_13" class="parallax parallax_five footer" data-stellar-background-ratio="0.5">
       <div class="parallax_inner">
