--- a/index.html
+++ b/index.html
@@ -230,8 +230,13 @@ Preloader
 
 		<!-- MOVIE -->
 		<section id="movie" class="contentBox line01">
-		<div class="inner">
-		<h2>MOVIE<span>ムービー</span></h2>
+		<div class="container">
+			<div class="col-xs-12">
+				<div class="section_head_widget animatedParent ">
+					<h1 class="animated fadeInDown">Movie</h1>
+				</div>
+			</div>
+
 		<ul class="movieBox">
 		<li><div class="player"><iframe src="//www.youtube.com/embed/z-0aaTHr8Qo?rel=0&showsearch=0&showinfo=1&autohide" frameborder="0" allowfullscreen></iframe></div></li>
 		<li><div class="player"><iframe src="//www.youtube.com/embed/2hpY6zTGGds?rel=0&showsearch=0&showinfo=1&autohide" frameborder="0" allowfullscreen></iframe></div></li>
