--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ Preloader
             <li><a href="#section_5" type="button"  data-toggle="collapse" data-target=".navbar-collapse">Schedule</a></li>
             <li><a href="#section_7" type="button"  data-toggle="collapse" data-target=".navbar-collapse">Member</a></li>
             <li><a href="#section_12" type="button"  data-toggle="collapse" data-target=".navbar-collapse">Biography</a></li>
-						<li><a href="#section_12" type="button"  data-toggle="collapse" data-target=".navbar-collapse">Biography</a></li>
+						<li><a href="#section_20" type="button"  data-toggle="collapse" data-target=".navbar-collapse">Movie</a></li>
             <li><a href="mailto:plus_sugar6@yahoo.ne.jp" type="button"  data-toggle="collapse" data-target=".navbar-collapse">Contact</a></li>
           </ul>
         </div>
@@ -229,19 +229,19 @@ Preloader
 
 
 		<!-- MOVIE -->
-		<section id="movie" class="contentBox line01">
+		<section id="section_20" class="about_section" style="padding-top:80px; ">
 		<div class="container">
-			<div class="col-xs-12">
-				<div class="section_head_widget animatedParent ">
-					<h1 class="animated fadeInDown">Movie</h1>
+			<div class="row">
+				<div class="col-xs-12">
+					<div class="section_head_widget animatedParent ">
+						<h1 class="animated fadeInDown">Movie</h1>
+					</div>
 				</div>
 			</div>
-
 		<ul class="movieBox">
-		<li><div class="player"><iframe src="//www.youtube.com/embed/z-0aaTHr8Qo?rel=0&showsearch=0&showinfo=1&autohide" frameborder="0" allowfullscreen></iframe></div></li>
-		<li><div class="player"><iframe src="//www.youtube.com/embed/2hpY6zTGGds?rel=0&showsearch=0&showinfo=1&autohide" frameborder="0" allowfullscreen></iframe></div></li>
-		<li><div class="player"><iframe src="//www.youtube.com/embed/zBKI_UDgeEM?rel=0&showsearch=0&showinfo=1&autohide" frameborder="0" allowfullscreen></iframe></div></li>
-
+			<li><div class="player"><iframe src="//www.youtube.com/embed/z-0aaTHr8Qo?rel=0&showsearch=0&showinfo=1&autohide" frameborder="0" allowfullscreen></iframe></div></li>
+			<li><div class="player"><iframe src="//www.youtube.com/embed/2hpY6zTGGds?rel=0&showsearch=0&showinfo=1&autohide" frameborder="0" allowfullscreen></iframe></div></li>
+			<li><div class="player"><iframe src="//www.youtube.com/embed/zBKI_UDgeEM?rel=0&showsearch=0&showinfo=1&autohide" frameborder="0" allowfullscreen></iframe></div></li>
 		</ul>
 		</div>
 		</section>
