--- a/index.html
+++ b/index.html
@@ -238,12 +238,17 @@ Preloader
 					</div>
 				</div>
 			</div>
-		<ul class="movieBox">
-			<li><div class="player"><iframe src="//www.youtube.com/embed/z-0aaTHr8Qo?rel=0&showsearch=0&showinfo=1&autohide" frameborder="0" allowfullscreen></iframe></div></li>
-			<li><div class="player"><iframe src="//www.youtube.com/embed/2hpY6zTGGds?rel=0&showsearch=0&showinfo=1&autohide" frameborder="0" allowfullscreen></iframe></div></li>
-			<li><div class="player"><iframe src="//www.youtube.com/embed/zBKI_UDgeEM?rel=0&showsearch=0&showinfo=1&autohide" frameborder="0" allowfullscreen></iframe></div></li>
-		</ul>
-		</div>
+
+			<div class="row">
+				<div class="col-xs-12">
+					<ul class="movieBox">
+						<li><div class="player"><iframe src="//www.youtube.com/embed/z-0aaTHr8Qo?rel=0&showsearch=0&showinfo=1&autohide" frameborder="0" allowfullscreen></iframe></div></li>
+						<li><div class="player"><iframe src="//www.youtube.com/embed/2hpY6zTGGds?rel=0&showsearch=0&showinfo=1&autohide" frameborder="0" allowfullscreen></iframe></div></li>
+						<li><div class="player"><iframe src="//www.youtube.com/embed/zBKI_UDgeEM?rel=0&showsearch=0&showinfo=1&autohide" frameborder="0" allowfullscreen></iframe></div></li>
+					</ul>
+				</div>
+			</div>
+
 		</section>
 		<!-- //MOVIE -->
 
