--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ Style Sheets
 <link rel="stylesheet" type="text/css" href="assets/css/bigvideo.css">
 <link rel="stylesheet" type="text/css" href="assets/css/jquery.mCustomScrollbar.css">
 <link rel="stylesheet" href="assets/css/home.css" type="text/css" media="all">
+<link rel="stylesheet" href="assets/css/sub.css" type="text/css" media="all">
 
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 <!--custom styles for Poison-->
@@ -268,8 +269,8 @@ Preloader
               <ul class="channels_list row animatedParent " data-sequence="400">
                 <li class="col-xs-12 col-sm-4  animated fadeInLeft" data-id="3"> <a href="https://www.youtube.com/channel/UCy686Sgq85FAOuPSgbH7C1g"><i class="fa fa-youtube"></i>official youtube</a></li>
                 <li class="col-xs-12 col-sm-4  animated fadeInLeft" data-id="6"> <a href="https://twitter.com/plus_Sugar0314"><i class="fa fa-twitter"></i>official twitter</a></li>
-								<li class="col-xs-12 col-sm-4  animated fadeInLeft" data-id="6"> <a href="https://linkco.re/yEYygzVE"><i class="fa fa-apple"></i>official music</a></li>
-								<li class="col-xs-12 col-sm-4  animated fadeInLeft" data-id="6"> <a href="https://linkco.re/0f6Ph1vG"><i class="fa fa-apple"></i>official music</a></li>
+								<li class="col-xs-12 col-sm-4  animated fadeInLeft" data-id="6"> <a href="https://linkco.re/yEYygzVE"><i class="fa fa-apple"></i>始まりの合図</a></li>
+								<li class="col-xs-12 col-sm-4  animated fadeInLeft" data-id="6"> <a href="https://linkco.re/0f6Ph1vG"><i class="fa fa-apple"></i>Bitter＋Sweet world</a></li>
               </ul>
             </div>
           </div>
