--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ Preloader
 
 
 		<!-- MOVIE -->
-		<section id="movie" class="contentBox line01">
+		<section id="section_20" class="about_section" style="padding-top:80px; ">
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12">
