--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ Style Sheets
 <link rel="stylesheet" type="text/css" href="assets/css/bigvideo.css">
 <link rel="stylesheet" type="text/css" href="assets/css/jquery.mCustomScrollbar.css">
 <link rel="stylesheet" href="assets/css/home.css" type="text/css" media="all">
+<link rel="stylesheet" href="assets/css/sub.css" type="text/css" media="all">
 
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 <!--custom styles for Poison-->
@@ -231,7 +232,7 @@ Preloader
 
 		<!-- MOVIE -->
 		<section id="section_20" class="about_section" style="padding-top:80px; ">
-
+		<div class="container">
 			<div class="row">
 				<div class="col-xs-12">
 					<div class="section_head_widget animatedParent ">
@@ -239,12 +240,17 @@ Preloader
 					</div>
 				</div>
 			</div>
+
+				<div class="row">
+					<div class="col-xs-12">
 						<ul class="movieBox">
 							<li><div class="player"><iframe src="//www.youtube.com/embed/z-0aaTHr8Qo?rel=0&showsearch=0&showinfo=1&autohide" frameborder="0" allowfullscreen></iframe></div></li>
 							<li><div class="player"><iframe src="//www.youtube.com/embed/2hpY6zTGGds?rel=0&showsearch=0&showinfo=1&autohide" frameborder="0" allowfullscreen></iframe></div></li>
 							<li><div class="player"><iframe src="//www.youtube.com/embed/zBKI_UDgeEM?rel=0&showsearch=0&showinfo=1&autohide" frameborder="0" allowfullscreen></iframe></div></li>
 						</ul>
-
+					</div>
+				</div>
+			</div>
 		</section>
 		<!-- //MOVIE -->
 
