--- a/index.html
+++ b/index.html
@@ -230,8 +230,40 @@ Preloader
     </section>
 
 
+
+
 		<!-- MOVIE -->
-		
+		<section id="section_20" class="about_section" style="padding-top:80px; ">
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-12">
+					<div class="section_head_widget animatedParent ">
+						<h1 class="animated fadeInDown">Movie</h1>
+					</div>
+				</div>
+			</div>
+
+				<div class="row">
+					<div class="col-xs-12">
+						<ul class="movieBox">
+							<li><div class="player"><iframe src="//www.youtube.com/embed/z-0aaTHr8Qo?rel=0&showsearch=0&showinfo=1&autohide" frameborder="0" allowfullscreen></iframe></div></li>
+							<li><div class="player"><iframe src="//www.youtube.com/embed/2hpY6zTGGds?rel=0&showsearch=0&showinfo=1&autohide" frameborder="0" allowfullscreen></iframe></div></li>
+							<li><div class="player"><iframe src="//www.youtube.com/embed/zBKI_UDgeEM?rel=0&showsearch=0&showinfo=1&autohide" frameborder="0" allowfullscreen></iframe></div></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- //MOVIE -->
+
+
+
+
+
+
+
+		<!-- MOVIE -->
+
 
 
 		<section id="section_20" class="contentBox line01">
