--- a/index.html
+++ b/index.html
@@ -222,6 +222,16 @@ Preloader
 								藤宮ももか加入</p>
               <p><span>2019年12月</span><br />
                 3曲目オリジナル曲「始まりの合図」披露</p>
+							<p><span>2020年2月</span><br />
+								ZircoTokyoにて3rdワンマンライブ開催！
+								同日より「Bitter+Sweet world」「始まりの合図」の配信開始</p>
+							<p><span>2020年6月</span><br />
+								クラウドファンディング219%達成</p>
+							<p><span>2020年8月</span><br />
+								4曲目オリジナル曲「きみとしたい夏」披露</p>
+							<p><span>2020年9月</span><br />
+								ファンクラブコミュニティ「とっても微糖派くらぶ」発足</p>
+
             </div>
           </div>
         </div>
