--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@ Preloader
 							<li><div class="player"><iframe src="//www.youtube.com/embed/z-0aaTHr8Qo?rel=0&showsearch=0&showinfo=1&autohide" frameborder="0" allowfullscreen></iframe></div></li>
 							<li><div class="player"><iframe src="//www.youtube.com/embed/2hpY6zTGGds?rel=0&showsearch=0&showinfo=1&autohide" frameborder="0" allowfullscreen></iframe></div></li>
 							<li><div class="player"><iframe src="//www.youtube.com/embed/zBKI_UDgeEM?rel=0&showsearch=0&showinfo=1&autohide" frameborder="0" allowfullscreen></iframe></div></li>
+							<li><div class="player"><iframe src="//www.youtube.com/embed/GDDYi4-dOfI?rel=0&showsearch=0&showinfo=1&autohide" frameborder="0" allowfullscreen></iframe></div></li>
 						</ul>
 					</div>
 				</div>
