--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ Preloader
 			</div>
 
 				<div class="row">
-					<div class="col-xs-12">
+					<div class="col-sm-4">
 						<ul class="movieBox">
 							<li><div class="player"><iframe src="//www.youtube.com/embed/z-0aaTHr8Qo?rel=0&showsearch=0&showinfo=1&autohide" frameborder="0" allowfullscreen></iframe></div></li>
 							<li><div class="player"><iframe src="//www.youtube.com/embed/2hpY6zTGGds?rel=0&showsearch=0&showinfo=1&autohide" frameborder="0" allowfullscreen></iframe></div></li>
