--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ Preloader
       <div class="parallax_inner">
         <div class="container">
           <div class="row">
-            <div class="col-xs-12">
+            <div class="channels_list row">
               <ul class="channels_list row animatedParent " data-sequence="400">
                 <li class="col-xs-12 col-sm-4  animated fadeInLeft" data-id="3"> <a href="https://www.youtube.com/channel/UCy686Sgq85FAOuPSgbH7C1g"><i class="fa fa-youtube"></i>official youtube</a></li>
                 <li class="col-xs-12 col-sm-4  animated fadeInLeft" data-id="6"> <a href="https://twitter.com/plus_Sugar0314"><i class="fa fa-twitter"></i>official twitter</a></li>
