--- a/index.html
+++ b/index.html
@@ -256,17 +256,16 @@ Preloader
 				<div class="row">
 					<div class="col-sm-4">
 						<ul class="movieBox">
-							<div class="player"><iframe src="//www.youtube.com/embed/z-0aaTHr8Qo?rel=0&showsearch=0&showinfo=1&autohide" frameborder="0" allowfullscreen></iframe></div>
-							<div class="player"><iframe src="//www.youtube.com/embed/2hpY6zTGGds?rel=0&showsearch=0&showinfo=1&autohide" frameborder="0" allowfullscreen></iframe></div>
-							<!-- <li><div class="player"><iframe src="//www.youtube.com/embed/zBKI_UDgeEM?rel=0&showsearch=0&showinfo=1&autohide" frameborder="0" allowfullscreen></iframe></div></li> -->
-							<div class="player"><iframe src="//www.youtube.com/embed/GDDYi4-dOfI?rel=0&showsearch=0&showinfo=1&autohide" frameborder="0" allowfullscreen></iframe></div>
+							<li class="player"><iframe src="//www.youtube.com/embed/z-0aaTHr8Qo?rel=0&showsearch=0&showinfo=1&autohide" frameborder="0" allowfullscreen></iframe></li>
+							<li class="player"><iframe src="//www.youtube.com/embed/2hpY6zTGGds?rel=0&showsearch=0&showinfo=1&autohide" frameborder="0" allowfullscreen></iframe></li>
+							<li class="player"><iframe src="//www.youtube.com/embed/XEZGIHdKxj8?rel=0&showsearch=0&showinfo=1&autohide" frameborder="0" allowfullscreen></iframe></li>
+							<li class="player"><iframe src="//www.youtube.com/embed/GDDYi4-dOfI?rel=0&showsearch=0&showinfo=1&autohide" frameborder="0" allowfullscreen></iframe></li>
 						</ul>
 					</div>
 				</div>
 			</div>
 		</section>
 		<!-- //MOVIE -->
-
 
 
     <div class="modal fade" id="regu_pop" tabindex="-1" role="dialog" aria-hidden="true">
