--- a/index.html
+++ b/index.html
@@ -405,6 +405,7 @@ Preloader
                 </ul>
                 <ul class="channels_list row">
                   <li class="col-xs-12 col-sm-3"> <a href="https://twitter.com/plus_S_Saya"><i class="fa fa-twitter"></i>TWITTER</a></li>
+									<li class="col-xs-12 col-sm-3"> <a href="https://www.instagram.com/saya_hinata_official/"><i class="fa fa-instagram"></i>INSTAGRAM</a></li>
                 </ul>
               </div>
             </div>
