--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ Preloader
 				</div>
 			</div>
 
-				<div class="row">
+				<div class="channels_list row">
 					<div class="col-sm-4">
 						<ul class="movieBox">
 							<li class="player"><iframe src="//www.youtube.com/embed/z-0aaTHr8Qo?rel=0&showsearch=0&showinfo=1&autohide" frameborder="0" allowfullscreen></iframe></li>
