--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ Preloader
                 <li class="col-xs-12 col-sm-4  animated fadeInLeft" data-id="6"> <a href="https://twitter.com/plus_Sugar0314"><i class="fa fa-twitter"></i>official twitter</a></li>
 								<li class="col-xs-12 col-sm-4  animated fadeInLeft" data-id="6"> <a href="https://linkco.re/yEYygzVE"><i class="fa fa-apple"></i>始まりの合図</a></li>
 								<li class="col-xs-12 col-sm-4  animated fadeInLeft" data-id="6"> <a href="https://linkco.re/0f6Ph1vG"><i class="fa fa-apple"></i>Bitter＋Sweet world</a></li>
-								<li class="col-xs-12 col-sm-4  animated fadeInLeft" data-id="6"> <a href="https://www.muevo-com.jp/campaigns/185"><i class="fas fa-users"></i>official funclub</a></li>
+								<li class="col-xs-12 col-sm-4  animated fadeInLeft" data-id="6"> <a href="https://www.muevo-com.jp/campaigns/185"><i class="fa fa-users"></i>official funclub</a></li>
               </ul>
             </div>
           </div>
