--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@ Preloader
 								<li class="col-xs-12 col-sm-4  animated fadeInLeft" data-id="6"> <a href="https://linkco.re/yEYygzVE"><i class="fa fa-apple"></i>始まりの合図</a></li>
 								<li class="col-xs-12 col-sm-4  animated fadeInLeft" data-id="6"> <a href="https://linkco.re/0f6Ph1vG"><i class="fa fa-apple"></i>Bitter＋Sweet world</a></li>
 								<li class="col-xs-12 col-sm-4  animated fadeInLeft" data-id="6"> <a href="https://linkco.re/8vnV9fhp"><i class="fa fa-apple"></i>きみとしたい夏</a></li>
-								<li class="col-xs-12 col-sm-4  animated fadeInLeft" data-id="6"> <a href="https://www.muevo-com.jp/campaigns/185"><i class="fa fa-user-o"></i>official fanclub</a></li>
+								<li class="col-xs-12 col-sm-4  animated fadeInLeft" data-id="6"> <a href="https://www.muevo-com.jp/campaigns/185"><i class="fa fa-user"></i>official fanclub</a></li>
               </ul>
             </div>
           </div>
