--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ Preloader
               <h6>Megupi</h6>
               <div class="galery_widget">
                 <ul class="gal_list owl-gallery">
-                  <li class="gallery-item"><a href="#"><img src="assets/img/megusub.jpg" alt=""></a></li>
+                  <li class="gallery-item"><a href="#"><img src="assets/img/megu20201220.jpg" alt=""></a></li>
                 </ul>
                 <ul class="social_share">
                   <li><a class="btn-share twitter" href="#">Tweet</a><span class="share-count">896</span></li>
@@ -350,7 +350,7 @@ Preloader
       </div>
     </div>
 
-    <div class="modal fade" id="gal_pop3" tabindex="-1" role="dialog" aria-hidden="true">
+    <!-- <div class="modal fade" id="gal_pop3" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <button type="button" class="close destroy_owl" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
@@ -385,11 +385,11 @@ Preloader
                 </ul>
               </div>
             </div>
-            <!--gallery-popup-->
+            gallery-popup
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <div class="modal fade" id="gal_pop4" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
@@ -400,7 +400,7 @@ Preloader
               <h6>Hinata Sayaka</h6>
               <div class="galery_widget">
                 <ul class="gal_list owl-gallery">
-                  <li class="gallery-item"><a href="#"><img src="assets/img/sayakasub.jpg" alt=""></a></li>
+                  <li class="gallery-item"><a href="#"><img src="assets/img/sayaka20201220.jpg" alt=""></a></li>
                 </ul>
                 <ul class="social_share">
                   <li><a class="btn-share twitter" href="#">Tweet</a><span class="share-count">896</span></li>
@@ -430,7 +430,7 @@ Preloader
         </div>
       </div>
     </div>
-    <div class="modal fade" id="gal_pop5" tabindex="-1" role="dialog" aria-hidden="true">
+    <!-- <div class="modal fade" id="gal_pop5" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <button type="button" class="close destroy_owl" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
@@ -465,12 +465,12 @@ Preloader
                 </ul>
               </div>
             </div>
-            <!--gallery-popup-->
+            gallery-popup
           </div>
         </div>
       </div>
-    </div>
-    <div class="modal fade" id="gal_pop6" tabindex="-1" role="dialog" aria-hidden="true">
+    </div> -->
+    <!-- <div class="modal fade" id="gal_pop6" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <button type="button" class="close destroy_owl" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
@@ -505,11 +505,11 @@ Preloader
                 </ul>
               </div>
             </div>
-            <!--gallery-popup-->
+            gallery-popup
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 	  <div class="modal fade" id="gal_pop7" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
@@ -520,7 +520,7 @@ Preloader
 							<h6>Matsuyama Goma</h6>
               <div class="galery_widget">
                 <ul class="gal_list owl-gallery">
-                  <li class="gallery-item"><a href="#"><img src="assets/img/gomachan.jpg" alt=""></a></li>
+                  <li class="gallery-item"><a href="#"><img src="assets/img/goma20201220.jpg" alt=""></a></li>
                 </ul>
                 <ul class="social_share">
                   <li><a class="btn-share twitter" href="#">Tweet</a><span class="share-count">896</span></li>
@@ -529,7 +529,7 @@ Preloader
                   <li>
                     <h6>Profile</h6>
                   </li>
-					<li>ニックネーム：松山ごま</li>
+					<li>名前：松山ごま</li>
 					<li>ニックネーム：ごまちゃん、ごまさま</li>
 					<li>担当カラー：メルヘンパープル</li>
                   	<li>生年月日：4/18</li>
@@ -551,7 +551,7 @@ Preloader
         </div>
       </div>
     </div>
-	  <div class="modal fade" id="gal_pop8" tabindex="-1" role="dialog" aria-hidden="true">
+	  <!-- <div class="modal fade" id="gal_pop8" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <button type="button" class="close destroy_owl" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
@@ -586,11 +586,97 @@ Preloader
                 </ul>
               </div>
             </div>
-            <!--gallery-popup-->
+            gallery-popup
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
+
+
+		<div class="modal fade" id="gal_pop7" tabindex="-1" role="dialog" aria-hidden="true">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<button type="button" class="close destroy_owl" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+					<div class="modal-body">
+						<div class="gallery_popup container">
+							<h2>天衣ゆな</h2>
+						 <h6>Amai Yuna</h6>
+							<div class="galery_widget">
+								<ul class="gal_list owl-gallery">
+									<li class="gallery-item"><a href="#"><img src="assets/img/yuna20201220.jpg" alt=""></a></li>
+								</ul>
+								<ul class="social_share">
+									<li><a class="btn-share twitter" href="#">Tweet</a><span class="share-count">896</span></li>
+								</ul>
+								<ul class="profile">
+									<li>
+										<h6>Profile</h6>
+									</li>
+				 <li>名前：天衣ゆな</li>
+				 <li>ニックネーム：ゆなてん</li>
+				 <li>担当カラー：きいろ</li>
+				 <li>生年月日：9/26</li>
+				 <li>血液型：B</li>
+				 <li>出身地：栃木県</li>
+				 <li>趣味：アイドル鑑賞・おひるね</li>
+				 <li>特技：うたをうたうこと</li>
+				 <li>キャッチフレーズ：none</li>
+								</ul>
+								<ul class="channels_list row">
+									<li class="col-xs-12 col-sm-3"> <a href="https://twitter.com/plus_S_Yuna"><i class="fa fa-twitter"></i>TWITTER</a></li>
+								 <li class="col-xs-12 col-sm-3"> <a href="https://instagram.com/goma_matsuyama?igshid=wsd6m180i2wc"><i class="fa fa-instagram"></i>INSTAGRAM</a></li>
+								 <li class="col-xs-12 col-sm-3"> <a href="https://note.com/matsugoma"><i class="fa fa-note"></i>NOTE</a></li>
+								</ul>
+							</div>
+						</div>
+						<!--gallery-popup-->
+					</div>
+				</div>
+			</div>
+		</div>
+
+
+		<div class="modal fade" id="gal_pop7" tabindex="-1" role="dialog" aria-hidden="true">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<button type="button" class="close destroy_owl" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+					<div class="modal-body">
+						<div class="gallery_popup container">
+							<h2>月美うみ</h2>
+						 <h6>Tsukimi Umi</h6>
+							<div class="galery_widget">
+								<ul class="gal_list owl-gallery">
+									<li class="gallery-item"><a href="#"><img src="assets/img/goma20201220.jpg" alt=""></a></li>
+								</ul>
+								<ul class="social_share">
+									<li><a class="btn-share twitter" href="#">Tweet</a><span class="share-count">896</span></li>
+								</ul>
+								<ul class="profile">
+									<li>
+										<h6>Profile</h6>
+									</li>
+				 <li>名前: 月美うみ</li>
+				 <li>ニックネーム：うみみ</li>
+				 <li>担当カラー：青</li>
+				 <li>生年月日：9/18</li>
+				 <li>血液型：A型</li>
+				 <li>出身地：東京下町</li>
+				 <li>趣味：映画鑑賞、料理、ゲーム、アスレチック遊び</li>
+				 <li>特技：エイム合わせ</li>
+				 <li>キャッチフレーズ：none</li>
+								</ul>
+								<ul class="channels_list row">
+									<li class="col-xs-12 col-sm-3"> <a href="https://twitter.com/plus_S_Umi"><i class="fa fa-twitter"></i>TWITTER</a></li>
+								 <li class="col-xs-12 col-sm-3"> <a href="https://instagram.com/goma_matsuyama?igshid=wsd6m180i2wc"><i class="fa fa-instagram"></i>INSTAGRAM</a></li>
+								 <li class="col-xs-12 col-sm-3"> <a href="https://note.com/matsugoma"><i class="fa fa-note"></i>NOTE</a></li>
+								</ul>
+							</div>
+						</div>
+						<!--gallery-popup-->
+					</div>
+				</div>
+			</div>
+		</div>
 
 
 
