--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ Preloader
         </div>
         <div class="row media_widget">
           <div class="col-xs-12 col-sm-4 col-md-3 animatedParent">
-            <figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop1"><img src="assets/img/megu.jpg" alt="" /> </a>
+            <figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop1"><img src="assets/img/megu20201220.jpg" alt="" /> </a>
               <figcaption>
                 <h6>メグ・ピッチ・オリオン</h6>
                 Megu・Pitch・Orion</figcaption>
@@ -151,7 +151,7 @@ Preloader
             </figure>
           </div> -->
           <div class="col-xs-12 col-sm-4 col-md-3 animatedParent">
-            <figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop4"><img src="assets/img/sayaka.jpg" alt="" /> </a>
+            <figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop4"><img src="assets/img/sayaka20201220.jpg" alt="" /> </a>
               <figcaption>
                 <h6>日向さや</h6>
                 Hinata Saya</figcaption>
@@ -172,7 +172,7 @@ Preloader
             </figure>
           </div> -->
 					<div class="col-xs-12 col-sm-4 col-md-3 animatedParent">
-            <figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop7"> <img src="assets/img/gomachan.jpg" alt="" /> </a>
+            <figure class="animated fadeInUp"> <a href="#" data-toggle="modal" data-target="#gal_pop7"> <img src="assets/img/goma20201220.jpg" alt="" /> </a>
               <figcaption>
                 <h6>松山ごま</h6>
                 Matsuyama Goma</figcaption>
