--- a/index.html
+++ b/index.html
@@ -268,9 +268,10 @@ Preloader
 			</div>
 
 				<div class="channels_list row">
-					<div class="col-sm-4">
+					<div class="col-xs-12 col-sm-4">
 						<ul class="movieBox">
 							<li class="player"><iframe src="//www.youtube.com/embed/z-0aaTHr8Qo?rel=0&showsearch=0&showinfo=1&autohide" frameborder="0" allowfullscreen></iframe></li>
+							<li class="player"><iframe width="560" height="315" src="https://www.youtube.com/embed/P9Nj82CTrB0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 							<li class="player"><iframe src="//www.youtube.com/embed/2hpY6zTGGds?rel=0&showsearch=0&showinfo=1&autohide" frameborder="0" allowfullscreen></iframe></li>
 							<li class="player"><iframe src="//www.youtube.com/embed/XEZGIHdKxj8?rel=0&showsearch=0&showinfo=1&autohide" frameborder="0" allowfullscreen></iframe></li>
 							<li class="player"><iframe src="//www.youtube.com/embed/GDDYi4-dOfI?rel=0&showsearch=0&showinfo=1&autohide" frameborder="0" allowfullscreen></iframe></li>
@@ -295,11 +296,11 @@ Preloader
             <div class="channels_list row">
               <ul class="channels_list row animatedParent " data-sequence="400">
                 <li class="col-xs-12 col-sm-4  animated fadeInLeft" data-id="3"> <a href="https://www.youtube.com/channel/UCy686Sgq85FAOuPSgbH7C1g"><i class="fa fa-youtube"></i>official youtube</a></li>
-                <li class="col-xs-12 col-sm-4  animated fadeInLeft" data-id="6"> <a href="https://twitter.com/plus_Sugar0314"><i class="fa fa-twitter"></i>official twitter</a></li>
-								<li class="col-xs-12 col-sm-4  animated fadeInLeft" data-id="6"> <a href="https://linkco.re/yEYygzVE"><i class="fa fa-apple"></i>始まりの合図</a></li>
+                <li class="col-xs-12 col-sm-4  animated fadeInLeft" data-id="4"> <a href="https://twitter.com/plus_Sugar0314"><i class="fa fa-twitter"></i>official twitter</a></li>
+								<li class="col-xs-12 col-sm-4  animated fadeInLeft" data-id="5"> <a href="https://linkco.re/yEYygzVE"><i class="fa fa-apple"></i>始まりの合図</a></li>
 								<li class="col-xs-12 col-sm-4  animated fadeInLeft" data-id="6"> <a href="https://linkco.re/0f6Ph1vG"><i class="fa fa-apple"></i>Bitter＋Sweet world</a></li>
-								<li class="col-xs-12 col-sm-4  animated fadeInLeft" data-id="6"> <a href="https://linkco.re/8vnV9fhp"><i class="fa fa-apple"></i>きみとしたい夏</a></li>
-								<li class="col-xs-12 col-sm-4  animated fadeInLeft" data-id="6"> <a href="https://www.muevo-com.jp/campaigns/185"><i class="fa fa-user"></i>official fanclub</a></li>
+								<li class="col-xs-12 col-sm-4  animated fadeInLeft" data-id="7"> <a href="https://linkco.re/8vnV9fhp"><i class="fa fa-apple"></i>きみとしたい夏</a></li>
+								<li class="col-xs-12 col-sm-4  animated fadeInLeft" data-id="8"> <a href="https://www.muevo-com.jp/campaigns/185"><i class="fa fa-user"></i>official fanclub</a></li>
               </ul>
             </div>
           </div>
@@ -624,8 +625,8 @@ Preloader
 								</ul>
 								<ul class="channels_list row">
 									<li class="col-xs-12 col-sm-3"> <a href="https://twitter.com/plus_S_Yuna"><i class="fa fa-twitter"></i>TWITTER</a></li>
-								 <li class="col-xs-12 col-sm-3"> <a href="https://instagram.com/goma_matsuyama?igshid=wsd6m180i2wc"><i class="fa fa-instagram"></i>INSTAGRAM</a></li>
-								 <li class="col-xs-12 col-sm-3"> <a href="https://note.com/matsugoma"><i class="fa fa-note"></i>NOTE</a></li>
+								 	<!-- <li class="col-xs-12 col-sm-3"> <a href="https://instagram.com/goma_matsuyama?igshid=wsd6m180i2wc"><i class="fa fa-instagram"></i>INSTAGRAM</a></li>
+								 	<li class="col-xs-12 col-sm-3"> <a href="https://note.com/matsugoma"><i class="fa fa-note"></i>NOTE</a></li> -->
 								</ul>
 							</div>
 						</div>
@@ -667,8 +668,8 @@ Preloader
 								</ul>
 								<ul class="channels_list row">
 									<li class="col-xs-12 col-sm-3"> <a href="https://twitter.com/plus_S_Umi"><i class="fa fa-twitter"></i>TWITTER</a></li>
-								 <li class="col-xs-12 col-sm-3"> <a href="https://instagram.com/goma_matsuyama?igshid=wsd6m180i2wc"><i class="fa fa-instagram"></i>INSTAGRAM</a></li>
-								 <li class="col-xs-12 col-sm-3"> <a href="https://note.com/matsugoma"><i class="fa fa-note"></i>NOTE</a></li>
+								 	<!-- <li class="col-xs-12 col-sm-3"> <a href="https://instagram.com/goma_matsuyama?igshid=wsd6m180i2wc"><i class="fa fa-instagram"></i>INSTAGRAM</a></li>
+								 	<li class="col-xs-12 col-sm-3"> <a href="https://note.com/matsugoma"><i class="fa fa-note"></i>NOTE</a></li> -->
 								</ul>
 							</div>
 						</div>
