--- a/index.html
+++ b/index.html
@@ -267,10 +267,10 @@ Preloader
 				</div>
 			</div>
 
-				<div class="channels_list row">
+				<div class="movie-wrap">
 					<div class="col-xs-12 col-sm-4">
 						<ul class="movieBox">
-							<li class="player"><iframe src="https://www.youtube.com/embed/P9Nj82CTrB0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+							<li class="player"><iframe width="560" height="315" src="https://www.youtube.com/embed/P9Nj82CTrB0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 							<li class="player"><iframe src="https://www.youtube.com/embed/2hpY6zTGGds" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 							<li class="player"><iframe src="https://www.youtube.com/embed/XEZGIHdKxj8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 							<li class="player"><iframe src="//www.youtube.com/embed/GDDYi4-dOfI?rel=0&showsearch=0&showinfo=1&autohide" frameborder="0" allowfullscreen></iframe></li>
