--- a/index.html
+++ b/index.html
@@ -245,6 +245,10 @@ Preloader
 								4曲目オリジナル曲「きみとしたい夏」披露</p>
 							<p><span>2020年9月</span><br />
 								ファンクラブコミュニティ「とっても微糖派くらぶ」発足</p>
+							<p><span>2020年10月</span><br />
+								5曲目オリジナル曲「運命じゃない人」披露</p>
+							<p><span>2021年1月</span><br />
+								メグ・ピッチ・オリオン、日向さや、松山ごま、天衣ゆな、月美うみの5人で新体制で始動</p>
 
             </div>
           </div>
@@ -252,9 +256,6 @@ Preloader
       </div>
       <!--container-->
     </section>
-
-
-
 
 		<!-- MOVIE -->
 		<section id="section_20" class="about_section" style="padding-top:80px; ">
@@ -276,7 +277,6 @@ Preloader
 			</div>
 		</section>
 		<!-- //MOVIE -->
-
 
     <div class="modal fade" id="regu_pop" tabindex="-1" role="dialog" aria-hidden="true">
       <section id="reguAjaxWrapper" class="container" >
@@ -631,7 +631,6 @@ Preloader
 			</div>
 		</div>
 
-
 		<div class="modal fade" id="gal_pop10" tabindex="-1" role="dialog" aria-hidden="true">
 			<div class="modal-dialog">
 				<div class="modal-content">
@@ -673,8 +672,6 @@ Preloader
 				</div>
 			</div>
 		</div>
-
-
 
     <footer id="section_13" class="parallax parallax_five footer" data-stellar-background-ratio="0.5">
       <div class="parallax_inner">
