--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ Preloader
 							<p><span>2020年9月</span><br />
 								ファンクラブコミュニティ「とっても微糖派くらぶ」発足</p>
 							<p><span>2020年10月</span><br />
-								5曲目オリジナル曲「運命じゃない人」披露</p>
+								5曲目オリジナル曲「運命じゃないひと」披露</p>
 							<p><span>2021年1月</span><br />
 								メグ・ピッチ・オリオン、日向さや、松山ごま、天衣ゆな、月美うみの5人で新体制で始動</p>
 
@@ -290,12 +290,13 @@ Preloader
           <div class="row">
             <div class="channels_list row">
               <ul class="channels_list row animatedParent " data-sequence="400">
-                <li class="col-xs-12 col-sm-4  animated fadeInLeft" data-id="3"> <a href="https://www.youtube.com/channel/UCy686Sgq85FAOuPSgbH7C1g"><i class="fa fa-youtube"></i>official youtube</a></li>
-                <li class="col-xs-12 col-sm-4  animated fadeInLeft" data-id="4"> <a href="https://twitter.com/plus_Sugar0314"><i class="fa fa-twitter"></i>official twitter</a></li>
-								<li class="col-xs-12 col-sm-4  animated fadeInLeft" data-id="5"> <a href="https://linkco.re/yEYygzVE"><i class="fa fa-apple"></i>始まりの合図</a></li>
-								<li class="col-xs-12 col-sm-4  animated fadeInLeft" data-id="6"> <a href="https://linkco.re/0f6Ph1vG"><i class="fa fa-apple"></i>Bitter＋Sweet world</a></li>
-								<li class="col-xs-12 col-sm-4  animated fadeInLeft" data-id="7"> <a href="https://linkco.re/8vnV9fhp"><i class="fa fa-apple"></i>きみとしたい夏</a></li>
-								<li class="col-xs-12 col-sm-4  animated fadeInLeft" data-id="8"> <a href="https://www.muevo-com.jp/campaigns/185"><i class="fa fa-user"></i>official fanclub</a></li>
+                <li class="col-xs-12 col-sm-3  animated fadeInLeft" data-id="3"> <a href="https://www.youtube.com/channel/UCy686Sgq85FAOuPSgbH7C1g"><i class="fa fa-youtube"></i>official youtube</a></li>
+                <li class="col-xs-12 col-sm-3  animated fadeInLeft" data-id="4"> <a href="https://twitter.com/plus_Sugar0314"><i class="fa fa-twitter"></i>official twitter</a></li>
+								<li class="col-xs-12 col-sm-3  animated fadeInLeft" data-id="5"> <a href="https://linkco.re/yEYygzVE"><i class="fa fa-apple"></i>始まりの合図</a></li>
+								<li class="col-xs-12 col-sm-3  animated fadeInLeft" data-id="6"> <a href="https://linkco.re/0f6Ph1vG"><i class="fa fa-apple"></i>Bitter＋Sweet world</a></li>
+								<li class="col-xs-12 col-sm-3  animated fadeInLeft" data-id="7"> <a href="https://linkco.re/8vnV9fhp"><i class="fa fa-apple"></i>きみとしたい夏</a></li>
+								<li class="col-xs-12 col-sm-3  animated fadeInLeft" data-id="7"> <a href="https://linkco.re/M5V6EY5M?lang=ja"><i class="fa fa-apple"></i>運命じゃないひと</a></li>
+								<li class="col-xs-12 col-sm-3  animated fadeInLeft" data-id="8"> <a href="https://www.muevo-com.jp/campaigns/185"><i class="fa fa-user"></i>official fanclub</a></li>
               </ul>
             </div>
           </div>
@@ -588,7 +589,6 @@ Preloader
       </div>
     </div> -->
 
-
 		<div class="modal fade" id="gal_pop9" tabindex="-1" role="dialog" aria-hidden="true">
 			<div class="modal-dialog">
 				<div class="modal-content">
@@ -658,7 +658,7 @@ Preloader
 									<li>出身地：東京下町</li>
 									<li>趣味：映画鑑賞、料理、ゲーム、アスレチック遊び</li>
 									<li>特技：エイム合わせ</li>
-									<li>キャッチフレーズ：none</li>
+									<li>キャッチフレーズ：:地上に舞い降りたjellyfish、青色担当うみみ</li>
 								</ul>
 								<ul class="channels_list row">
 									<li class="col-xs-12 col-sm-3"> <a href="https://twitter.com/plus_S_Umi"><i class="fa fa-twitter"></i>TWITTER</a></li>
