--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ Preloader
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="#section_5" type="button"  data-toggle="collapse" data-target=".navbar-collapse">Schedule</a></li>
+            <li><a href="#section_6" type="button"  data-toggle="collapse" data-target=".navbar-collapse">News</a></li>
             <li><a href="#section_7" type="button"  data-toggle="collapse" data-target=".navbar-collapse">Member</a></li>
             <li><a href="#section_12" type="button"  data-toggle="collapse" data-target=".navbar-collapse">Biography</a></li>
 						<li><a href="#section_20" type="button"  data-toggle="collapse" data-target=".navbar-collapse">Movie</a></li>
@@ -125,6 +126,37 @@ Preloader
         <div id="tracksAjax" class="content_expander music_widget"> </div>
       </section>
     </section>
+
+
+<!-- NEWS add 2021/01/20 -->
+		<section id="section_12" class="about_section" style="padding-top:80px; ">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12">
+            <div class="section_head_widget animatedParent ">
+              <h1 class="animated fadeInDown">NEWS</h1>
+              <h4> +Sugar. </h4>
+            </div>
+          </div>
+          <!--section_head_widget-->
+        </div>
+        <!--row-->
+        <div class="row">
+          <div class="col-xs-12">
+            <div class="text_widget">
+							<p align="center">＋Sugar.(ぷらすしゅがー)、通称ぷらしゅが。ファン名称は微糖派。</p>
+              <p align="center" style="padding-bottom: 60px;">いつもの生活にちょこっと甘いお砂糖をプラスしたようなセルフプロデュースユニット！</p>
+              <p><span>2018年5月</span><br />
+                メグ・ピッチ・オリオン、カノン、日向さや、メロナ、夢乃ねんの5人で始動</p>
+
+            </div>
+          </div>
+        </div>
+      </div>
+      <!--container-->
+    </section>
+<!-- NEWS -->
+
     <section id="section_7" class="media_section section_first">
       <div class="container">
         <div class="row">
